@@ -2,6 +2,9 @@ Version 1.43:
 	- Made the GMP library mandatory
 	- Removed the arbitrary precision math library, replaced with GMP
 	- Added 64-bit modmul operations to all builds
+	- Modified the NFS relation reading code to ignore relations that
+		would not participate in dependencies anyway. This has the
+		side effect of simplifiying the NFS square root a bit
 	- Added checks that the input NFS number corresponds to the input
 		NFS polynomials (thanks Tom Womack)
 	- Modified the initialization for the NFS square root to be
